# Financial-Wellness-RAG-AI-Chatbot

./: README.md
backend/: .env.example  .gitignore  Approve-phase2.5.md  Approve-phase3.md  Approve.md  README.md  docker-compose.yaml
backend/kong/: kong.yml
backend/scripts/: eval_rag.ps1  gen_keys.sh  init-databases.sql  seed_phase3_data.ps1  setup.sh  test_phase2.ps1
backend/services/embedding/: Dockerfile  pyproject.toml
backend/services/embedding/src/embedding/: config.py  main.py  model.py
backend/services/embedding/src/embedding/routers/: embed.py
backend/services/identity/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/services/identity/migrations/: env.py
backend/services/identity/migrations/versions/: 0001_initial.py
backend/services/identity/src/identity/: config.py  database.py  main.py
backend/services/identity/src/identity/models/: __init__.py  user.py
backend/services/identity/src/identity/routers/: auth.py
backend/services/identity/src/identity/schemas/: auth.py
backend/services/identity/src/identity/services/: jwt_service.py  user_service.py
backend/services/insight/: .env.example  Dockerfile  README.md  pyproject.toml
backend/services/insight/migrations/: env.py
backend/services/insight/migrations/versions/: 0001_initial.py  0002_document_chunks.py  0003_hybrid_fts.py
backend/services/insight/src/insight/: config.py  database.py  dependencies.py  main.py
backend/services/insight/src/insight/messaging/: base_consumer.py  consumers.py
backend/services/insight/src/insight/models/: __init__.py  chunk.py  insight.py
backend/services/insight/src/insight/rag/: chunker.py  context_builder.py  ingestion.py  llm_client.py  preprocessor.py  prompt.py  retrieval.py
backend/services/insight/src/insight/routers/: chat.py  insight.py  settings.py
backend/services/insight/src/insight/services/: insight_service.py
backend/services/journal/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/services/journal/migrations/: env.py
backend/services/notification/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/services/notification/migrations/: env.py
backend/services/notification/migrations/versions/: 0001_initial.py
backend/services/notification/src/notification/: config.py  database.py  dependencies.py  main.py
backend/services/notification/src/notification/messaging/: consumers.py
backend/services/notification/src/notification/models/: __init__.py  alert.py  notification.py
backend/services/notification/src/notification/routers/: alert.py
backend/services/notification/src/notification/schemas/: notification.py
backend/services/notification/src/notification/services/: notification_service.py
backend/services/transaction/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/services/transaction/migrations/: env.py
docs/: Update.md
frontend/: README.md  package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/chat/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/journal/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: providers.tsx  sidebar.tsx
frontend/lib/: api.ts  errors.ts
frontend/services/: auth.ts  insight.ts  journal.ts  notification.ts  transaction.ts
frontend/store/: auth.ts
planning/: chat-clear-req-with-claude.md  confirm-phase-frontend.md  phase2-implementation.md  phase2-rag-planning.md  phase2.5-chunk-enrichment.md  planning-for-frontend.md
(+24 files in other folders)
